--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=InterviewDB;user=root;password=root123;"
   },
+  "FrontendBaseUrl": "https://localhost:4200/meeting",
   "EmailSettings": {
     "From": "sourabose2004@gmail.com",
     "SmtpServer": "smtp.gmail.com",
