--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
+    "@microsoft/signalr": "^9.0.6",
     "express": "^5.1.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
