--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+  "JwtSettings": {
+    "Key": "THIS_IS_A_SUPER_SECRET_KEY_Soura@2004#700",
+    "Issuer": "InterviewSystem",
+    "Audience": "InterviewAdmin"
+  },
+
+  "AllowedHosts": "*"
 }
