--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=InterviewDB;user=root;password=root123;"
   },
+  "JwtSettings": {
+    "Key": "THIS_IS_A_SUPER_SECRET_KEY_Soura@2004#700",
+    "Issuer": "InterviewSystem",
+    "Audience": "InterviewAdmin"
+  },
   "FrontendBaseUrl": "https://localhost:4200/meeting",
   "EmailSettings": {
     "From": "sourabose2004@gmail.com",
