--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@microsoft/signalr": "^9.0.6",
     "express": "^5.1.0",
     "font-awesome": "^4.7.0",
+    "ngx-cookie-service": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
