--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -2,10 +2,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=InterviewDB;user=root;password=root123;"
   },
-  "JwtSettings": {
+  "JwtAdmin": {
     "Key": "THIS_IS_A_SUPER_SECRET_KEY_Soura@2004#700",
-    "Issuer": "InterviewSystem",
-    "Audience": "InterviewAdmin"
+    "Issuer": "AdminAuth",
+    "Audience": "AdminUsers"
+  },
+  "JwtCandidate": {
+    "Key": "THIS_IS_A_CANDIDATE_SUPER_SECRET_KEY_Soura@2004#700",
+    "Issuer": "CandidateAuth",
+    "Audience": "CandidateUsers"
+  },
+    "JwtInterviewer": {
+    "Key": "THIS_IS_A_INTERVIEWER_SUPER_SECRET_KEY_Soura@2004#700",
+    "Issuer": "InterviewerAuth",
+    "Audience": "InterviewerUsers"
   },
   "FrontendBaseUrl": "https://localhost:4200/meeting",
   "EmailSettings": {
