--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=InterviewDB;user=root;password=root123;"
+    "DefaultConnection": "server=localhost;port=3306;database=interviewsbdb;user=root;password=Antarip_47;"
   },
   "JwtAdmin": {
     "Key": "THIS_IS_A_SUPER_SECRET_KEY_Soura@2004#700",
