--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -22,6 +22,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.css"
             ],
