--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
     "@microsoft/signalr": "^9.0.6",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "font-awesome": "^4.7.0",
     "ngx-cookie-service": "^20.1.1",
